--- a/Prueba002/Prueba002/Prueba002/Views/Productos/Create.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Productos/Create.cshtml
@@ -24,7 +24,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="IdCategoria" class="control-label"></label>
-                <select asp-for="IdCategoria" class ="form-control" asp-items="ViewBag.IdCategoria"></select>
+                <select asp-for="IdCategoria" class="form-control" asp-items="ViewBag.IdCategoria">
+                    <option value="">-- Select Category --</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="Stock" class="control-label"></label>
@@ -38,7 +40,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="IdMarcas" class="control-label"></label>
-                <select asp-for="IdMarcas" class ="form-control" asp-items="ViewBag.IdMarcas"></select>
+                <select asp-for="IdMarcas" class="form-control" asp-items="ViewBag.IdMarcas">
+                    <option value="">-- Select Brand --</option>
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
