--- a/Prueba002/Prueba002/Prueba002/Views/Productos/Create.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Productos/Create.cshtml
@@ -24,9 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="IdCategoria" class="control-label"></label>
-                <select asp-for="IdCategoria" class="form-control" asp-items="ViewBag.IdCategoria">
-                    <option value="">-- Select Category --</option>
-                </select>
+                <select asp-for="IdCategoria" class ="form-control" asp-items="ViewBag.IdCategoria"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Stock" class="control-label"></label>
