--- a/Prueba002/Prueba002/Prueba002/Views/Productos/Edit.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Productos/Edit.cshtml
@@ -25,8 +25,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="IdCategoria" class="control-label"></label>
-                <select asp-for="IdCategoria" class="form-control" asp-items="ViewBag.IdCategoria"></select>
-                <span asp-validation-for="IdCategoria" class="text-danger"></span>
+                <select asp-for="IdCategoria" class="form-control" asp-items="ViewBag.IdCategoria">
+                    <option value="">-- Select Category --</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="Stock" class="control-label"></label>
@@ -40,8 +41,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="IdMarcas" class="control-label"></label>
-                <select asp-for="IdMarcas" class="form-control" asp-items="ViewBag.IdMarcas"></select>
-                <span asp-validation-for="IdMarcas" class="text-danger"></span>
+                <select asp-for="IdMarcas" class="form-control" asp-items="ViewBag.IdMarcas">
+                    <option value="">-- Select Brand --</option>
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
