--- a/Prueba002/Prueba002/Prueba002/Views/Carritos/Details.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Carritos/Details.cshtml
@@ -20,13 +20,13 @@
             @Html.DisplayNameFor(model => model.IdProductoNavigation)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdProductoNavigation.IdProducto)
+            @Html.DisplayFor(model => model.IdProductoNavigation.NombreProducto)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdUsuarioNavigation)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdUsuarioNavigation.Id)
+            @Html.DisplayFor(model => model.IdUsuarioNavigation.Nombre)
         </dd>
     </dl>
 </div>
