--- a/Prueba002/Prueba002/Prueba002/Views/Carritos/Index.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Carritos/Index.cshtml
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.IdUsuarioNavigation.Nombre)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    <a asp-action="Edit" asp-route-id="@item.IdProducto">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.IdProducto">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.IdProducto">Delete</a>
             </td>
         </tr>
 }
