--- a/Prueba002/Prueba002/Prueba002/Views/DetalleCompras/Details.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/DetalleCompras/Details.cshtml
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new { id=Model.IdCompra , idp=Model.IdProducto}) |
     <a asp-action="Index">Back to List</a>
 </div>
