--- a/Prueba002/Prueba002/Prueba002/Views/DetalleCompras/Index.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/DetalleCompras/Index.cshtml
@@ -43,9 +43,9 @@
                 @Html.DisplayFor(modelItem => item.IdProductoNavigation.NombreProducto)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { id=item.IdCompra , idp=item.IdProducto }) |
+                    @Html.ActionLink("Details", "Details", new { id=item.IdCompra , idp=item.IdProducto }) |
+                    @Html.ActionLink("Delete", "Delete", new { id=item.IdCompra , idp=item.IdProducto })
             </td>
         </tr>
 }
