--- a/Prueba002/Prueba002/Prueba002/Views/Carritos/Details.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Carritos/Details.cshtml
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new {id=Model.IdProducto,idu=Model.IdUsuario}) |
     <a asp-action="Index">Back to List</a>
 </div>
