Se Creo la maqueta html de la pagina inicial

--- a/Prueba002/Prueba002/Prueba002/Views/Shared/_Layout.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,10 +9,14 @@
     <link rel="stylesheet" href="~/Prueba002.styles.css" asp-append-version="true" />
 </head>
 <body>
+    
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 border-3">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+
+                <!-- Logo y Nombre de la tienda -->
+
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <img src="Imagenes/Logo.jpeg" alt="" width="75" >
                 </a>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TecnoByte</a>
@@ -21,16 +25,34 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+
+                    <!-- Links a otras pantallas -->
+
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Pagína Principal</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+
+                        <!-- Scroll -->
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Categoría
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                                <li><a class="dropdown-item" href="#">Procesadores</a></li>
+                                <li><a class="dropdown-item" href="#">Tarjetas Grafícas</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
+                
             </div>
         </nav>
     </header>
