--- a/Prueba002/Prueba002/Prueba002/Views/Home/Index.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Home/Index.cshtml
@@ -2,8 +2,90 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Bienvenido a TecnoByte</h1>
-    <h1 class="display-4">¿Que Deseas Comprar Hoy?</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<header>
+    <div class="">
+        <h1 class="">Bienvenidos a TecnoByte</h1>
+        <h1 class="">¿Qué Desea Comprar Hoy?</h1>
+    </div>
+    <div class="container-icon">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+        </svg>
+    </div>
+
+</header>
+<div class="container-items">
+    <!--Procesadores-->
+    <div class"item">
+        <figure>
+            <img src="~/Imagenes/Procesadores.jpg" alt="Procesadores" />
+        </figure>
+        <div class"Info-Producto">
+            <button>Ir a Procesadores</button>
+        </div>
+    </div>
+    <!--Tarjetas Graficas-->
+    <div class"item">
+        <figure>
+            <img src="~/Imagenes/TarjetasGraficas.jpg" alt="Tarjeta Grafica" />
+        </figure>
+        <div class"Info-Producto">
+            <button>Ir a Tarjetas Graficas</button>
+        </div>
+    </div>
+    <!--Placa Madre-->
+    <div class"item">
+        <figure>
+            <img src="~/Imagenes/PlacaMadre.png" alt="Placa Madre" />
+        </figure>
+        <div class"Info-Producto">
+            <button>Ir a Placas Madre</button>
+        </div>
+    </div>
+    <!--Almacenamiento-->
+    <div class"item">
+        <figure>
+            <img src="~/Imagenes/SSD NVMe.png" alt="Almacenamiento" />
+        </figure>
+        <div class"Info-Producto">
+            <button>Ir a Almacenamientos</button>
+        </div>
+    </div>
+    <!--Gabinetes-->
+    <div class"item">
+        <figure>
+            <img src="~/Imagenes/Gabinetes.jpg" alt="Gabinetes" />
+        </figure>
+        <div class"Info-Producto">
+            <button>Ir a Gabinetes</button>
+        </div>
+    </div>
+    <!--Disipadores-->
+    <div class"item">
+        <figure>
+            <img src="~/Imagenes/Disipadores.png" alt="Disipadores" />
+        </figure>
+        <div class"Info-Producto">
+            <button>Ir a Disipadores</button>
+        </div>
+    </div>
+    <!--Fuentes De Poder-->
+    <div class"item">
+        <figure>
+            <img src="~/Imagenes/FuenteDePoder.jpg" alt="Fuentes De Poder" />
+        </figure>
+        <div class"Info-Producto">
+            <button>Ir a Fuentes De Poder</button>
+        </div>
+    </div>
+    <!--Memoras RAM-->
+    <div class"item">
+        <figure>
+            <img src="~/Imagenes/MemoriaRAM.jpeg" alt="Memorias Ram" />
+        </figure>
+        <div class"Info-Producto">
+            <button>Ir a Memorias RAM</button>
+        </div>
+    </div>
 </div>
+
