se modificaron las columnas y botones del index ademas de agregar titulos adicionales

--- a/Prueba002/Prueba002/Prueba002/Views/Home/Index.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Home/Index.cshtml
@@ -15,76 +15,109 @@
 
 </header>
 <div class="container-items">
-    <!--Procesadores-->
-    <div class"item">
-        <figure>
-            <img src="~/Imagenes/Procesadores.jpg" alt="Procesadores" />
-        </figure>
-        <div class"Info-Producto">
-            <button>Ir a Procesadores</button>
+    <div class="row">
+        <!--Procesadores-->
+        <div class="col-4">
+            <div class="item">
+                <figure>
+                    <img src="~/Imagenes/Procesadores.jpg" alt="Procesadores" />
+                </figure>
+                <div class="Info-Producto">
+                    <h2>Procesadores</h2>
+                    <button>Ir a Procesadores</button>
+                </div>
+            </div>
         </div>
-    </div>
-    <!--Tarjetas Graficas-->
-    <div class"item">
-        <figure>
-            <img src="~/Imagenes/TarjetasGraficas.jpg" alt="Tarjeta Grafica" />
-        </figure>
-        <div class"Info-Producto">
-            <button>Ir a Tarjetas Graficas</button>
+
+        <!--Tarjetas Graficas-->
+        <div class="col-4">
+            <div class="item">
+                <figure>
+                    <img src="~/Imagenes/TarjetasGraficas.jpg" alt="Tarjeta Grafica" />
+                </figure>
+                <div class="Info-Producto">
+                    <h2>Tarjetas Graficas</h2>
+                    <button>Ir a Tarjetas Graficas</button>
+                </div>
+            </div>
         </div>
-    </div>
-    <!--Placa Madre-->
-    <div class"item">
-        <figure>
-            <img src="~/Imagenes/PlacaMadre.png" alt="Placa Madre" />
-        </figure>
-        <div class"Info-Producto">
-            <button>Ir a Placas Madre</button>
+        
+        <!--Placa Madre-->
+        <div class="col-4">
+            <div class="item">
+                <figure>
+                    <img src="~/Imagenes/PlacaMadre.png" alt="Placa Madre" />
+                </figure>
+                <div class="Info-Producto">
+                    <h2>Placa Madre</h2>
+                    <button>Ir a Placas Madre</button>
+                </div>
+            </div>
         </div>
-    </div>
-    <!--Almacenamiento-->
-    <div class"item">
-        <figure>
-            <img src="~/Imagenes/SSD NVMe.png" alt="Almacenamiento" />
-        </figure>
-        <div class"Info-Producto">
-            <button>Ir a Almacenamientos</button>
+        
+        <!--Almacenamiento-->
+        <div class="col-4">
+            <div class="item">
+                <figure>
+                    <img src="~/Imagenes/SSD NVMe.png" alt="Almacenamiento" />
+                </figure>
+                <div class="Info-Producto">
+                    <h2>Almacenamiento</h2>
+                    <button>Ir a Almacenamientos</button>
+                </div>
+            </div>
         </div>
-    </div>
-    <!--Gabinetes-->
-    <div class"item">
-        <figure>
-            <img src="~/Imagenes/Gabinetes.jpg" alt="Gabinetes" />
-        </figure>
-        <div class"Info-Producto">
-            <button>Ir a Gabinetes</button>
+        
+        <!--Gabinetes-->
+        <div class="col-4">
+            <div class="item">
+                <figure>
+                    <img src="~/Imagenes/Gabinetes.jpg" alt="Gabinetes" />
+                </figure>
+                <div class="Info-Producto">
+                    <h2>Gabinetes</h2>
+                    <button>Ir a Gabinetes</button>
+                </div>
+            </div>
         </div>
-    </div>
-    <!--Disipadores-->
-    <div class"item">
-        <figure>
-            <img src="~/Imagenes/Disipadores.png" alt="Disipadores" />
-        </figure>
-        <div class"Info-Producto">
-            <button>Ir a Disipadores</button>
+        
+        <!--Disipadores-->
+        <div class="col-4">
+            <div class="item">
+                <figure>
+                    <img src="~/Imagenes/Disipadores.png" alt="Disipadores" />
+                </figure>
+                <div class="Info-Producto">
+                    <h2>Disipadores</h2>
+                    <button>Ir a Disipadores</button>
+                </div>
+            </div>
         </div>
-    </div>
-    <!--Fuentes De Poder-->
-    <div class"item">
-        <figure>
-            <img src="~/Imagenes/FuenteDePoder.jpg" alt="Fuentes De Poder" />
-        </figure>
-        <div class"Info-Producto">
-            <button>Ir a Fuentes De Poder</button>
+        
+        <!--Fuentes De Poder-->
+        <div class="col-4">
+            <div class="item">
+                <figure>
+                    <img src="~/Imagenes/FuenteDePoder.jpg" alt="Fuentes De Poder" />
+                </figure>
+                <div class="Info-Producto">
+                    <h2>Fuentes de Poder</h2>
+                    <button>Ir a Fuentes De Poder</button>
+                </div>
+            </div>
         </div>
-    </div>
-    <!--Memoras RAM-->
-    <div class"item">
-        <figure>
-            <img src="~/Imagenes/MemoriaRAM.jpeg" alt="Memorias Ram" />
-        </figure>
-        <div class"Info-Producto">
-            <button>Ir a Memorias RAM</button>
+        
+        <!--Memoras RAM-->
+        <div class="col-4">
+            <div class="item">
+                <figure>
+                    <img src="~/Imagenes/MemoriaRAM.jpeg" alt="Memorias Ram" />
+                </figure>
+                <div class="Info-Producto">
+                    <h2>Memorias RAM</h2>
+                    <button>Ir a Memorias RAM</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
