Los botones del index Dirigen a sus respectivas pantallas

--- a/Prueba002/Prueba002/Prueba002/Views/Home/Index.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         <h1 class="">¿Qué Desea Comprar Hoy?</h1>
     </div>
     <div class="container-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
             <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
         </svg>
     </div>
@@ -24,7 +24,7 @@
                 </figure>
                 <div class="Info-Producto">
                     <h2>Procesadores</h2>
-                    <button>Ir a Procesadores</button>
+                    <button><a  asp-controller="Home" asp-action="Procesadores">Ir a Procesadores</a></button>
                 </div>
             </div>
         </div>
@@ -37,7 +37,7 @@
                 </figure>
                 <div class="Info-Producto">
                     <h2>Tarjetas Graficas</h2>
-                    <button>Ir a Tarjetas Graficas</button>
+                    <button><a asp-controller="Home" asp-action="TarjetasGraficas">Ir a Tarjetas Graficas</a></button>
                 </div>
             </div>
         </div>
@@ -50,7 +50,7 @@
                 </figure>
                 <div class="Info-Producto">
                     <h2>Placa Madre</h2>
-                    <button>Ir a Placas Madre</button>
+                    <button><a asp-controller="Home" asp-action="PlacaMadre">Ir a Placas Madre</a></button>
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
                 </figure>
                 <div class="Info-Producto">
                     <h2>Almacenamiento</h2>
-                    <button>Ir a Almacenamientos</button>
+                    <button><a asp-controller="Home" asp-action="Almacenamiento">Ir a Almacenamiento</a></button>
                 </div>
             </div>
         </div>
@@ -76,7 +76,7 @@
                 </figure>
                 <div class="Info-Producto">
                     <h2>Gabinetes</h2>
-                    <button>Ir a Gabinetes</button>
+                    <button><a asp-controller="Home" asp-action="Gabinetes">Ir a Gabinetes</a></button>
                 </div>
             </div>
         </div>
@@ -89,7 +89,7 @@
                 </figure>
                 <div class="Info-Producto">
                     <h2>Disipadores</h2>
-                    <button>Ir a Disipadores</button>
+                    <button><a asp-controller="Home" asp-action="Disipadores">Ir a Disipadores</a></button>
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
                 </figure>
                 <div class="Info-Producto">
                     <h2>Fuentes de Poder</h2>
-                    <button>Ir a Fuentes De Poder</button>
+                    <button><a asp-controller="Home" asp-action="FuentesDePoder">Ir a Fuentes De Poder</a></button>
                 </div>
             </div>
         </div>
@@ -115,7 +115,7 @@
                 </figure>
                 <div class="Info-Producto">
                     <h2>Memorias RAM</h2>
-                    <button>Ir a Memorias RAM</button>
+                    <button><a asp-controller="Home" asp-action="MemoriasRAM">Ir a Memorias RAM</a></button>
                 </div>
             </div>
         </div>
