--- a/Prueba002/Prueba002/Prueba002/wwwroot/css/site.css
+++ b/Prueba002/Prueba002/Prueba002/wwwroot/css/site.css
@@ -14,7 +14,7 @@ html {
 }
 
 
-.icon-cart{
+.container-icon{
     width: 40px;
     height: 40px;
 }
@@ -25,8 +25,8 @@ img{
 header{
     display: flex;
     justify-content: space-between;
-    padding: 30px 0 40px 0;
 }
+
 
 footer{
 }
@@ -43,16 +43,20 @@ footer{
     border: 1px solid black;
     text-align: center;
 }
+.item a{
+    text-decoration: none;
+    color: black;
+}
 .Info-Producto{
     padding: 15px 30px;
     line-height: 2;
     display: flex;
     flex-direction: column;
 }
-.Info-Producto button{
-    border: none;
-    background: black;
-    color: white;
+.Info-Producto button {
+    border-radius: 10px;
+    background: #81D4FA;
+    color: black;
     padding: 15px 10px;
     cursor: pointer;
 }
