--- a/Prueba002/Prueba002/Prueba002/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,12 +5,12 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
+
 <div class="row">
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h2>Use a local account to log in.</h2>
+                <h2>¡Hola! ¿Ya tienes tu cuenta? Inicia sesión y disfruta de tus compras.</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-floating">
