Se hicieron modificaciones al footer y se hizo mas responsivo

--- a/Prueba002/Prueba002/Prueba002/Views/Home/Index.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Home/Index.cshtml
@@ -2,123 +2,122 @@
     ViewData["Title"] = "Home Page";
 }
 
-<header>
-    <div class="">
-        <h1 class="">Bienvenidos a TecnoByte</h1>
-        <h1 class="">¿Qué Desea Comprar Hoy?</h1>
-    </div>
-    <div class="container-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
-        </svg>
-    </div>
-
-</header>
-<div class="container-items">
-    <div class="row">
-        <!--Procesadores-->
-        <div class="col-4">
-            <div class="item">
-                <figure>
-                    <img src="~/Imagenes/Procesadores.jpg" alt="Procesadores" />
-                </figure>
-                <div class="Info-Producto">
-                    <h2>Procesadores</h2>
-                    <button><a  asp-controller="Home" asp-action="Procesadores">Ir a Procesadores</a></button>
-                </div>
-            </div>
+    <header class="header-index">
+        <div class="">
+            <h1 class="">¡Bienvenidos a TecnoByte!</h1>
+            <h1 class="">¿Qué Desea Comprar Hoy?</h1>
+        </div>
+        <div class="container-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+            </svg>
         </div>
 
-        <!--Tarjetas Graficas-->
-        <div class="col-4">
-            <div class="item">
-                <figure>
-                    <img src="~/Imagenes/TarjetasGraficas.jpg" alt="Tarjeta Grafica" />
-                </figure>
-                <div class="Info-Producto">
-                    <h2>Tarjetas Graficas</h2>
-                    <button><a asp-controller="Home" asp-action="TarjetasGraficas">Ir a Tarjetas Graficas</a></button>
+    </header>
+    <div class="container-items">
+        <div class="row">
+            <!--Procesadores-->
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="item">
+                    <figure>
+                        <img src="~/Imagenes/Procesadores.jpg" alt="Procesadores" />
+                    </figure>
+                    <div class="Info-Producto">
+                        <h2>Procesadores</h2>
+                        <button><a asp-controller="Home" asp-action="Procesadores">Ir a Procesadores</a></button>
+                    </div>
                 </div>
             </div>
-        </div>
-        
-        <!--Placa Madre-->
-        <div class="col-4">
-            <div class="item">
-                <figure>
-                    <img src="~/Imagenes/PlacaMadre.png" alt="Placa Madre" />
-                </figure>
-                <div class="Info-Producto">
-                    <h2>Placa Madre</h2>
-                    <button><a asp-controller="Home" asp-action="PlacaMadre">Ir a Placas Madre</a></button>
+
+            <!--Tarjetas Graficas-->
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="item">
+                    <figure>
+                        <img src="~/Imagenes/TarjetasGraficas.jpg" alt="Tarjeta Grafica" />
+                    </figure>
+                    <div class="Info-Producto">
+                        <h2>Tarjetas Graficas</h2>
+                        <button><a asp-controller="Home" asp-action="TarjetasGraficas">Ir a Tarjetas Graficas</a></button>
+                    </div>
                 </div>
             </div>
-        </div>
-        
-        <!--Almacenamiento-->
-        <div class="col-4">
-            <div class="item">
-                <figure>
-                    <img src="~/Imagenes/SSD NVMe.png" alt="Almacenamiento" />
-                </figure>
-                <div class="Info-Producto">
-                    <h2>Almacenamiento</h2>
-                    <button><a asp-controller="Home" asp-action="Almacenamiento">Ir a Almacenamiento</a></button>
+
+            <!--Placa Madre-->
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="item">
+                    <figure>
+                        <img src="~/Imagenes/PlacaMadre.png" alt="Placa Madre" />
+                    </figure>
+                    <div class="Info-Producto">
+                        <h2>Placa Madre</h2>
+                        <button><a asp-controller="Home" asp-action="PlacaMadre">Ir a Placas Madre</a></button>
+                    </div>
                 </div>
             </div>
-        </div>
-        
-        <!--Gabinetes-->
-        <div class="col-4">
-            <div class="item">
-                <figure>
-                    <img src="~/Imagenes/Gabinetes.jpg" alt="Gabinetes" />
-                </figure>
-                <div class="Info-Producto">
-                    <h2>Gabinetes</h2>
-                    <button><a asp-controller="Home" asp-action="Gabinetes">Ir a Gabinetes</a></button>
+
+            <!--Almacenamiento-->
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="item">
+                    <figure>
+                        <img src="~/Imagenes/SSD NVMe.png" alt="Almacenamiento" />
+                    </figure>
+                    <div class="Info-Producto">
+                        <h2>Almacenamiento</h2>
+                        <button><a asp-controller="Home" asp-action="Almacenamiento">Ir a Almacenamiento</a></button>
+                    </div>
                 </div>
             </div>
-        </div>
-        
-        <!--Disipadores-->
-        <div class="col-4">
-            <div class="item">
-                <figure>
-                    <img src="~/Imagenes/Disipadores.png" alt="Disipadores" />
-                </figure>
-                <div class="Info-Producto">
-                    <h2>Disipadores</h2>
-                    <button><a asp-controller="Home" asp-action="Disipadores">Ir a Disipadores</a></button>
+
+            <!--Gabinetes-->
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="item">
+                    <figure>
+                        <img src="~/Imagenes/Gabinetes.jpg" alt="Gabinetes" />
+                    </figure>
+                    <div class="Info-Producto">
+                        <h2>Gabinetes</h2>
+                        <button><a asp-controller="Home" asp-action="Gabinetes">Ir a Gabinetes</a></button>
+                    </div>
                 </div>
             </div>
-        </div>
-        
-        <!--Fuentes De Poder-->
-        <div class="col-4">
-            <div class="item">
-                <figure>
-                    <img src="~/Imagenes/FuenteDePoder.jpg" alt="Fuentes De Poder" />
-                </figure>
-                <div class="Info-Producto">
-                    <h2>Fuentes de Poder</h2>
-                    <button><a asp-controller="Home" asp-action="FuentesDePoder">Ir a Fuentes De Poder</a></button>
+
+            <!--Disipadores-->
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="item">
+                    <figure>
+                        <img src="~/Imagenes/Disipadores.png" alt="Disipadores" />
+                    </figure>
+                    <div class="Info-Producto">
+                        <h2>Disipadores</h2>
+                        <button><a asp-controller="Home" asp-action="Disipadores">Ir a Disipadores</a></button>
+                    </div>
                 </div>
             </div>
-        </div>
-        
-        <!--Memoras RAM-->
-        <div class="col-4">
-            <div class="item">
-                <figure>
-                    <img src="~/Imagenes/MemoriaRAM.jpeg" alt="Memorias Ram" />
-                </figure>
-                <div class="Info-Producto">
-                    <h2>Memorias RAM</h2>
-                    <button><a asp-controller="Home" asp-action="MemoriasRAM">Ir a Memorias RAM</a></button>
+
+            <!--Fuentes De Poder-->
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="item">
+                    <figure>
+                        <img src="~/Imagenes/FuenteDePoder.jpg" alt="Fuentes De Poder" />
+                    </figure>
+                    <div class="Info-Producto">
+                        <h2>Fuentes de Poder</h2>
+                        <button><a asp-controller="Home" asp-action="FuentesDePoder">Ir a Fuentes De Poder</a></button>
+                    </div>
+                </div>
+            </div>
+
+            <!--Memoras RAM-->
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="item">
+                    <figure>
+                        <img src="~/Imagenes/MemoriaRAM.jpeg" alt="Memorias Ram" />
+                    </figure>
+                    <div class="Info-Producto">
+                        <h2>Memorias RAM</h2>
+                        <button><a asp-controller="Home" asp-action="MemoriasRAM">Ir a Memorias RAM</a></button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
