Agregue los links a los botones de inicio

--- a/Prueba002/Prueba002/Prueba002/Views/Home/Index.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                     </figure>
                     <div class="Info-Producto">
                         <h2>Procesadores</h2>
-                        <button><a asp-controller="Home" asp-action="Procesadores">Ir a Procesadores</a></button>
+                    <button><a asp-controller="Productos" asp-action="Index" asp-route-id="id=12" >Ir a Procesadores</a></button>
                     </div>
                 </div>
             </div>
@@ -37,7 +37,7 @@
                     </figure>
                     <div class="Info-Producto">
                         <h2>Tarjetas Graficas</h2>
-                        <button><a asp-controller="Home" asp-action="TarjetasGraficas">Ir a Tarjetas Graficas</a></button>
+                    <button><a asp-controller="Productos" asp-action="Index" asp-route-id="id=13">Ir a Tarjetas Graficas</a></button>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                     </figure>
                     <div class="Info-Producto">
                         <h2>Placa Madre</h2>
-                        <button><a asp-controller="Home" asp-action="PlacaMadre">Ir a Placas Madre</a></button>
+                    <button><a asp-controller="Productos" asp-action="Index" asp-route-id="id=14">Ir a Placas Madre</a></button>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                     </figure>
                     <div class="Info-Producto">
                         <h2>Almacenamiento</h2>
-                        <button><a asp-controller="Home" asp-action="Almacenamiento">Ir a Almacenamiento</a></button>
+                    <button><a asp-controller="Productos" asp-action="Index" asp-route-id="id=15">Ir a Almacenamiento</a></button>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                     </figure>
                     <div class="Info-Producto">
                         <h2>Gabinetes</h2>
-                        <button><a asp-controller="Home" asp-action="Gabinetes">Ir a Gabinetes</a></button>
+                    <button><a asp-controller="Productos" asp-action="Index" asp-route-id="id=16">Ir a Gabinetes</a></button>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                     </figure>
                     <div class="Info-Producto">
                         <h2>Disipadores</h2>
-                        <button><a asp-controller="Home" asp-action="Disipadores">Ir a Disipadores</a></button>
+                    <button><a asp-controller="Productos" asp-action="Index" asp-route-id="id=19">Ir a Disipadores</a></button>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     </figure>
                     <div class="Info-Producto">
                         <h2>Fuentes de Poder</h2>
-                        <button><a asp-controller="Home" asp-action="FuentesDePoder">Ir a Fuentes De Poder</a></button>
+                    <button><a asp-controller="Productos" asp-action="Index" asp-route-id="id=17">Ir a Fuentes De Poder</a></button>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                     </figure>
                     <div class="Info-Producto">
                         <h2>Memorias RAM</h2>
-                        <button><a asp-controller="Home" asp-action="MemoriasRAM">Ir a Memorias RAM</a></button>
+                    <button><a asp-controller="Productos" asp-action="Index" asp-route-id="id=18">Ir a Memorias RAM</a></button>
                     </div>
                 </div>
             </div>
