--- a/Prueba002/Prueba002/Prueba002/Views/Productos/Index.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Productos/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1></h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear Un Nuevo Producto</a>
 </p>
 <table class="table">
     <thead>
@@ -55,9 +55,9 @@
                     @Html.DisplayFor(modelItem => item.IdMarcasNavigation.Marcas)
                 </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdProducto">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdProducto">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdProducto">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.IdProducto">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.IdProducto">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.IdProducto">Eliminar</a>
             </td>
         </tr>
 }
