--- a/Prueba002/Prueba002/Prueba002/Views/Home/Index.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Home/Index.cshtml
@@ -12,21 +12,23 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
             </svg>
         </div>
-    </header>
-<!-- Shopping Cart Button -->
-<button class="cart-button">
-    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-8 h-8">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M4 4L2 6m0 0L1 7m1-1L2 6m7 13h10a2 2 0 002-2V7a2 2 0 00-2-2H7a2 2 0 00-2 2v4m0 6h10a2 2 0 002-2v-2H5a2 2 0 002 2z" />
-    </svg>
-</button>
+    <!-- Carrito Button -->
+    <button class="cart-button" onclick="window.location.href='/Carritos/Index'">
+        Carrito
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-8 h-8 inline-block ml-2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4 4L2 6m0 0L1 7m1-1L2 6m7 13h10a2 2 0 002-2V7a2 2 0 00-2-2H7a2 2 0 00-2 2v4m0 6h10a2 2 0 002-2v-2H5a2 2 0 002 2z" />
+        </svg>
+    </button>
 
-<!-- Shopping Bag Button -->
-<button class="bag-button">
-    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-8 h-8">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M4 4l2 16h12l2-16M7 4h10" />
-    </svg>
-</button>
-</button>
+    <!-- Compra Button -->
+    <button class="purchase-button" onclick="window.location.href='/Compras/Index'">
+        Compra
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-8 h-8 inline-block ml-2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4 4l2 16h12l2-16M7 4h10" />
+        </svg>
+    </button>
+    </header>
+
     <div class="container-items">
         <div class="row">
             <!--Procesadores-->
