Agregue diseño a carrito index,crear,editar y eliminar

--- a/Prueba002/Prueba002/Prueba002/Views/Carritos/Index.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Carritos/Index.cshtml
@@ -4,44 +4,52 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<link rel="stylesheet" href="~/css/carrito.css">
+
+<h1 class="display-4">Carrito de Compras</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Agregar Nuevo</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Cantidad)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdProductoNavigation)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdUsuarioNavigation)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cantidad)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdProductoNavigation.NombreProducto)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdUsuarioNavigation.Nombre)
-            </td>
-            <td>
-                    @Html.ActionLink("Edit", "Edit", new{id=item.IdProducto,idu=item.IdUsuario}) |
-                    @Html.ActionLink("Details", "Details", new{id=item.IdProducto,idu=item.IdUsuario}) |
-                    @Html.ActionLink("Delete", "Delete", new{id=item.IdProducto,idu=item.IdUsuario}) |
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+<div class="table-responsive">
+    <table class="table table-bordered table-hover">
+        <thead class="thead-dark">
+            <tr>
+                <th>
+                    Cantidad
+                </th>
+                <th>
+                    Producto
+                </th>
+                <th>
+                    Usuario
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Cantidad)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IdProductoNavigation.NombreProducto)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IdUsuarioNavigation.Nombre)
+                    </td>
+                    <td>
+                        <div class="btn-group" role="group">
+                            @Html.ActionLink("Editar", "Edit", new { id = item.IdProducto, idu = item.IdUsuario }, new { @class = "btn btn-warning btn-sm" })
+                            @Html.ActionLink("Detalles", "Details", new { id = item.IdProducto, idu = item.IdUsuario }, new { @class = "btn btn-info btn-sm" })
+                            @Html.ActionLink("Eliminar", "Delete", new { id = item.IdProducto, idu = item.IdUsuario }, new { @class = "btn btn-danger btn-sm" })
+                        </div>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
