--- a/Prueba002/Prueba002/Prueba002/Views/Carritos/Delete.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Carritos/Delete.cshtml
@@ -4,37 +4,40 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<link rel="stylesheet" href="~/css/carritoborrar.css">
 
-<h3>Are you sure you want to delete this?</h3>
+<h1 class="display-4">Eliminar</h1>
+
+<h3>¿Estás seguro de que quieres eliminar esto?</h3>
 <div>
     <h4>Carrito</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Cantidad)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Cantidad)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IdProductoNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IdProductoNavigation.NombreProducto)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IdUsuarioNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IdUsuarioNavigation.Nombre)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdProducto" />
         <input type="hidden" asp-for="IdUsuario" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <a asp-action="Index" class="btn btn-secondary">Volver a la Lista</a>
     </form>
 </div>
+
