--- a/Prueba002/Prueba002/Prueba002/Views/Carritos/Details.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Carritos/Details.cshtml
@@ -4,33 +4,36 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<link rel="stylesheet" href="~/css/carritodetalles.css">
+
+<h1 class="display-4">Detalles</h1>
 
 <div>
     <h4>Carrito</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Cantidad)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Cantidad)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IdProductoNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IdProductoNavigation.NombreProducto)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IdUsuarioNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IdUsuarioNavigation.Nombre)
         </dd>
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new {id=Model.IdProducto,idu=Model.IdUsuario}) |
-    <a asp-action="Index">Back to List</a>
+    <a href="@Url.Action("Edit", new { id = Model.IdProducto, idu = Model.IdUsuario })" class="btn btn-primary">Editar</a> |
+    <a asp-action="Index" class="btn btn-secondary">Volver a la Lista</a>
 </div>
+
