--- a/Prueba002/Prueba002/Prueba002/Views/Carritos/Edit.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Carritos/Edit.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<link rel="stylesheet" href="~/css/carritoeditar.css">
+
+<h1 class="display-4">Editar</h1>
 
 <h4>Carrito</h4>
 <hr />
@@ -15,21 +17,23 @@
             <input type="hidden" asp-for="IdProducto" />
             <input type="hidden" asp-for="IdUsuario" />
             <div class="form-group">
-                <label asp-for="Cantidad" class="control-label"></label>
+                <label asp-for="Cantidad" class="control-label">Cantidad</label>
                 <input asp-for="Cantidad" class="form-control" />
                 <span asp-validation-for="Cantidad" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-secondary">Volver a la Lista</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
