--- a/Prueba002/Prueba002/Prueba002/Views/Shared/_Layout.cshtml
+++ b/Prueba002/Prueba002/Prueba002/Views/Shared/_Layout.cshtml
@@ -42,6 +42,9 @@
         <div class="container">
             &copy; 2023 - Tecnobyte - Nuestras Redes Sociales - 
         </div>
+        <div>
+            <h3>Eres empleado?</h3>
+        </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
